[package]
name = "lockbox"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.4", features = ["wgpu", "image", "canvas"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
hex = "0.4"
rand = "0.8.5"
dotenv = "0.15"
rfd = "0.11"
age = "0.7"
sysinfo = "0.21.1"
dirs = "4.0"